CloudAlpacas/salesforce/main/default/objects/BulkEmailMessage__c/fields/Bulk_Email_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Email_Message_Id__c</fullName>
    <description>External upsert key + Data Cloud DMO primary key.</description>
    <externalId>true</externalId>
    <label>Bulk Email Message Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>