CloudAlpacas/salesforce/main/default/objects/BulkEmailMessage__c/fields/Digital_Content__c.field-meta.xml
<CustomField>
    <fullName>Digital_Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Digital Content</label>
    <referenceTo>EmailContent__c</referenceTo>
    <relationshipLabel>Bulk Email Messages</relationshipLabel>
    <relationshipName>Bulk_Email_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>