CloudAlpacas/salesforce/main/default/objects/BulkEmailMessage__c/fields/Flow_Element__c.field-meta.xml
<CustomField>
    <fullName>Flow_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flow Element</label>
    <referenceTo>FlowElement__c</referenceTo>
    <relationshipLabel>Bulk Email Messages</relationshipLabel>
    <relationshipName>Bulk_Email_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>